[gd_scene load_steps=23 format=3 uid="uid://ouw4vxp1hm24"]

[ext_resource type="Script" uid="uid://mc6lkg7jndel" path="res://scripts/Menu/lobby_wait.gd" id="1_lfnhy"]
[ext_resource type="VideoStream" uid="uid://bfrassi24xuss" path="res://assets/sources/background.ogv" id="2_al50h"]
[ext_resource type="FontFile" uid="uid://b7ua41mspaxmj" path="res://data/LilitaOne-Regular.ttf" id="3_rgr5d"]
[ext_resource type="Texture2D" uid="uid://djbea4m2qkck4" path="res://assets/BACK.png" id="4_emke7"]
[ext_resource type="PackedScene" uid="uid://dloka1md5xig" path="res://scenes/Menu/waiting_room_player_2.tscn" id="5_o7htu"]
[ext_resource type="PackedScene" uid="uid://d01psbecedrg1" path="res://scenes/Menu/waiting_room_placeholder.tscn" id="6_4y7f0"]
[ext_resource type="Texture2D" uid="uid://dncppny3wuhm4" path="res://assets/PLUS.png" id="8_4y7f0"]
[ext_resource type="Texture2D" uid="uid://btj0ua5klp1ed" path="res://assets/PLUS-1.png" id="9_gtvvq"]
[ext_resource type="Texture2D" uid="uid://b7eoun1g84iw2" path="res://assets/Lobby1.png" id="10_gtvvq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lfnhy"]
bg_color = Color(0.698039, 0.4, 0.258824, 1)
border_width_left = 7
border_width_top = 7
border_width_right = 7
border_width_bottom = 7
border_color = Color(0.247059, 0.0941176, 0.00392157, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_306rh"]
bg_color = Color(0.698039, 0.4, 0.258824, 1)
border_width_left = 7
border_width_top = 7
border_width_right = 7
border_width_bottom = 7
border_color = Color(0.247059, 0.0941176, 0.00392157, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7tdqe"]
bg_color = Color(0.384314, 0.129412, 0.00392157, 1)
border_width_left = 7
border_width_top = 7
border_width_right = 7
border_width_bottom = 7
border_color = Color(0.247059, 0.0941176, 0.00392157, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gry0s"]
bg_color = Color(0.698039, 0.4, 0.258824, 1)
border_width_left = 14
border_width_top = 14
border_width_right = 14
border_width_bottom = 14
border_color = Color(0.247059, 0.0941176, 0.00392157, 1)
corner_radius_top_left = 90
corner_radius_top_right = 90
corner_radius_bottom_right = 90
corner_radius_bottom_left = 90

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o7htu"]
bg_color = Color(0.698039, 0.4, 0.258824, 1)
border_width_left = 14
border_width_top = 14
border_width_right = 14
border_width_bottom = 14
border_color = Color(0.247059, 0.0941176, 0.00392157, 1)
corner_radius_top_left = 90
corner_radius_top_right = 90
corner_radius_bottom_right = 90
corner_radius_bottom_left = 90

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4y7f0"]
bg_color = Color(0.384314, 0.129412, 0.00392157, 1)
border_width_left = 14
border_width_top = 14
border_width_right = 14
border_width_bottom = 14
border_color = Color(0.247059, 0.0941176, 0.00392157, 1)
corner_radius_top_left = 90
corner_radius_top_right = 90
corner_radius_bottom_right = 90
corner_radius_bottom_left = 90

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gtvvq"]
bg_color = Color(0.698039, 0.4, 0.258824, 1)
border_width_left = 14
border_width_top = 14
border_width_right = 14
border_width_bottom = 14
border_color = Color(0.247059, 0.0941176, 0.00392157, 1)
corner_radius_top_left = 90
corner_radius_top_right = 90
corner_radius_bottom_right = 90
corner_radius_bottom_left = 90

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_afsdv"]
bg_color = Color(0.698039, 0.4, 0.258824, 1)
border_width_left = 14
border_width_top = 14
border_width_right = 14
border_width_bottom = 14
border_color = Color(0.247059, 0.0941176, 0.00392157, 1)
corner_radius_top_left = 90
corner_radius_top_right = 90
corner_radius_bottom_right = 90
corner_radius_bottom_left = 90

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xcaqq"]
bg_color = Color(0.384314, 0.129412, 0.00392157, 1)
border_width_left = 14
border_width_top = 14
border_width_right = 14
border_width_bottom = 14
border_color = Color(0.247059, 0.0941176, 0.00392157, 1)
corner_radius_top_left = 90
corner_radius_top_right = 90
corner_radius_bottom_right = 90
corner_radius_bottom_left = 90

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iacr6"]
bg_color = Color(0.384314, 0.129412, 0.00392157, 1)
corner_radius_top_left = 60
corner_radius_top_right = 60
corner_radius_bottom_right = 60
corner_radius_bottom_left = 60

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0hj2k"]
bg_color = Color(0.478431, 0.294118, 0.207843, 0.796078)
corner_radius_top_left = 60
corner_radius_top_right = 60
corner_radius_bottom_right = 60
corner_radius_bottom_left = 60
shadow_color = Color(0, 0, 0, 0.517647)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nal1n"]
bg_color = Color(0.227613, 0.906696, 0.959497, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.00392157, 0.321569, 0.345098, 1)
corner_radius_top_left = 60
corner_radius_top_right = 60
corner_radius_bottom_right = 60
corner_radius_bottom_left = 60

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ds3ec"]
bg_color = Color(0.0941176, 0.752941, 0.8, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.00392157, 0.321569, 0.345098, 1)
corner_radius_top_left = 60
corner_radius_top_right = 60
corner_radius_bottom_right = 60
corner_radius_bottom_left = 60
shadow_color = Color(0, 0, 0, 0.431373)
shadow_size = 1
shadow_offset = Vector2(2, 3)

[node name="Lobyy_Wait" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_lfnhy")

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1330.0
offset_bottom = 800.0
grow_horizontal = 2
grow_vertical = 2
stream = ExtResource("2_al50h")
autoplay = true
expand = true
loop = true

[node name="TextureRect" type="Control" parent="."]
anchors_preset = 0
offset_right = 1330.0
offset_bottom = 800.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ColorRect" type="ColorRect" parent="TextureRect"]
layout_mode = 0
offset_right = 1330.0
offset_bottom = 117.0
color = Color(0.384314, 0.129412, 0.00784314, 1)

[node name="TextureButton" type="TextureButton" parent="TextureRect/ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.019
anchor_top = 0.128
anchor_right = 0.086
anchor_bottom = 0.735
offset_left = -4.0
offset_top = 0.0239992
offset_bottom = 0.00499725
grow_vertical = 2
texture_normal = ExtResource("4_emke7")

[node name="MenuButton" type="Button" parent="TextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.004
offset_left = 1035.0
offset_top = 120.0
offset_right = 1345.68
offset_bottom = 224.0
scale = Vector2(0.8, 0.8)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_rgr5d")
theme_override_font_sizes/font_size = 50
theme_override_styles/hover = SubResource("StyleBoxFlat_lfnhy")
theme_override_styles/pressed = SubResource("StyleBoxFlat_306rh")
theme_override_styles/normal = SubResource("StyleBoxFlat_7tdqe")
text = "  LOBBY         â–¼"
alignment = 0

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect"]
visible = false
custom_minimum_size = Vector2(3, 0)
layout_mode = 0
offset_left = 1055.0
offset_top = 200.0
offset_right = 2495.0
offset_bottom = 970.0
scale = Vector2(0.15, 0.15)

[node name="Parties publiques" type="Button" parent="TextureRect/VBoxContainer"]
custom_minimum_size = Vector2(1400, 350)
layout_mode = 2
size_flags_horizontal = 0
theme_override_fonts/font = ExtResource("3_rgr5d")
theme_override_font_sizes/font_size = 200
theme_override_styles/hover = SubResource("StyleBoxFlat_gry0s")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_lfnhy")
theme_override_styles/pressed = SubResource("StyleBoxFlat_o7htu")
theme_override_styles/normal = SubResource("StyleBoxFlat_4y7f0")
text = "#479816"

[node name="Parties privees" type="Button" parent="TextureRect/VBoxContainer"]
custom_minimum_size = Vector2(1400, 350)
layout_mode = 2
size_flags_horizontal = 0
theme_override_fonts/font = ExtResource("3_rgr5d")
theme_override_font_sizes/font_size = 200
theme_override_styles/hover = SubResource("StyleBoxFlat_gtvvq")
theme_override_styles/pressed = SubResource("StyleBoxFlat_afsdv")
theme_override_styles/normal = SubResource("StyleBoxFlat_xcaqq")
text = "888888"
autowrap_mode = 3

[node name="HBoxContainer" type="HBoxContainer" parent="TextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.037594
anchor_top = 0.2575
anchor_right = 0.951128
anchor_bottom = 0.8825
offset_left = 30.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Traveler1" parent="TextureRect/HBoxContainer" instance=ExtResource("5_o7htu")]
layout_mode = 2

[node name="Traveler5" parent="TextureRect/HBoxContainer" instance=ExtResource("5_o7htu")]
layout_mode = 2

[node name="Traveler2" parent="TextureRect/HBoxContainer" instance=ExtResource("6_4y7f0")]
layout_mode = 2

[node name="Traveler4" type="TextureRect" parent="TextureRect/HBoxContainer"]
custom_minimum_size = Vector2(310, 0)
layout_direction = 2
layout_mode = 2

[node name="invite4" type="TextureButton" parent="TextureRect/HBoxContainer/Traveler4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("8_4y7f0")
texture_pressed = ExtResource("9_gtvvq")
texture_hover = ExtResource("9_gtvvq")
stretch_mode = 3

[node name="OverlayMask" type="Control" parent="TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="Panel" parent="TextureRect"]
visible = false
layout_mode = 0
offset_left = 413.0
offset_top = 224.0
offset_right = 1409.0
offset_bottom = 942.0
scale = Vector2(0.5, 0.5)
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_iacr6")

[node name="Panel" type="Panel" parent="TextureRect/MarginContainer"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.059
anchor_top = 0.0571429
anchor_right = 0.959
anchor_bottom = 0.957143
offset_left = -23.764
offset_top = -1.0286
offset_right = 55.836
offset_bottom = 72.7713
scale = Vector2(0.95, 0.9)
theme_override_styles/panel = SubResource("StyleBoxFlat_0hj2k")

[node name="Partie_1" type="NinePatchRect" parent="TextureRect/MarginContainer/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0860656
anchor_top = 0.0555556
anchor_right = 0.923156
anchor_bottom = 0.826389
offset_left = -3.00006
offset_top = -3.05176e-05
offset_right = -3.00006
offset_bottom = 0.999969
texture = ExtResource("10_gtvvq")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="TextureRect/MarginContainer/Panel/Partie_1"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0839695
anchor_top = 0.116667
anchor_right = 0.877863
anchor_bottom = 0.261111
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_rgr5d")
theme_override_font_sizes/font_size = 60
text = "Partie de SachAtlantis"
metadata/_edit_use_anchors_ = true

[node name="Label3" type="Label" parent="TextureRect/MarginContainer/Panel/Partie_1"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0850995
anchor_top = 0.28777
anchor_right = 0.504947
anchor_bottom = 0.421103
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_rgr5d")
theme_override_font_sizes/font_size = 60
text = "Joueurs: 4"
metadata/_edit_use_anchors_ = true

[node name="Inviter" type="Button" parent="TextureRect/MarginContainer/Panel/Partie_1"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.275784
anchor_top = 0.899281
anchor_right = 0.726269
anchor_bottom = 1.1457
offset_right = 92.0116
offset_bottom = 34.2516
scale = Vector2(0.8, 0.8)
theme_override_fonts/font = ExtResource("3_rgr5d")
theme_override_font_sizes/font_size = 90
theme_override_styles/hover = SubResource("StyleBoxFlat_nal1n")
theme_override_styles/normal = SubResource("StyleBoxFlat_ds3ec")
text = " Inviter"
metadata/_edit_use_anchors_ = true

[node name="Label4" type="Label" parent="TextureRect/MarginContainer/Panel/Partie_1"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0850995
anchor_top = 0.48761
anchor_right = 0.504947
anchor_bottom = 0.744804
offset_bottom = -68.8669
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_rgr5d")
theme_override_font_sizes/font_size = 60
text = "#479816
888888"
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="TextureRect/ColorRect/TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="TextureRect/MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/Parties publiques" to="." method="_on_parties_publiques_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/Parties privees" to="." method="_on_parties_privees_pressed"]
[connection signal="pressed" from="TextureRect/HBoxContainer/Traveler4/invite4" to="." method="_on_invite_4_pressed"]
[connection signal="pressed" from="TextureRect/MarginContainer/Panel/Partie_1/Inviter" to="." method="_on_inviter_pressed"]
